--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.12.3
 certifi==2023.11.17
 charset-normalizer==3.3.2
+DateTime==5.4
 idna==3.6
 numpy==1.26.3
 pandas==2.2.0
@@ -11,3 +12,4 @@ six==1.16.0
 soupsieve==2.5
 tzdata==2023.4
 urllib3==2.2.0
+zope.interface==6.1
