--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
+asttokens==2.4.1
 black==24.4.2
 click==8.1.7
+decorator==5.1.1
+executing==2.0.1
+ipython==8.25.0
+jedi==0.19.1
+matplotlib-inline==0.1.7
 mypy-extensions==1.0.0
 packaging==24.1
+parso==0.8.4
 pathspec==0.12.1
+pexpect==4.9.0
 platformdirs==4.2.2
+prompt_toolkit==3.0.47
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.18.0
+six==1.16.0
+stack-data==0.6.3
+tokenize-rt==5.2.0
+traitlets==5.14.3
+wcwidth==0.2.13
