--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,231 @@
-asttokens==2.4.1
-black==24.4.2
-click==8.1.7
+aiosqlite==0.21.0
+annotated-types==0.7.0
+anyio==4.8.0
+apparmor==4.0.3
+appdirs==1.4.4
+application-utility==1.4.0
+argcomplete==3.5.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==23.2.1.dev0
+autocommand==2.2.2
+Babel==2.15.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+btrfsutil==6.13
+CacheControl==0.14.2
+certifi==2025.1.31
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+colorlog==6.9.0
+comm==0.2.2
+commonmark==0.9.1
+contourpy==1.3.1
+crcmod==1.7
+cryptography==44.0.2
+cuda-bindings==12.8.0
+cuda-core==0.1.1
+cuda-python==12.8.0
+cupshelpers==1.0
+cycler==0.12.1
+Cython==3.0.12
+dbus-python==1.4.0
+debugpy==1.8.13+0.g96de4376.dirty
 decorator==5.1.1
-executing==2.0.1
-ipython==8.25.0
-jedi==0.19.1
+defusedxml==0.7.1
+deprecation==2.1.0
+distlib==0.3.9
+distro==1.9.0
+docopt==0.6.2
+docutils==0.21.2
+entrypoints==0.4
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.18.0
+fonttools==4.57.0
+fqdn==1.5.1
+greenlet==3.1.1
+h11==0.14.0
+hidapi==0.14.0
+html5lib==1.1
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+importlib_metadata==7.2.1
+inflect==7.5.0
+ipykernel==6.29.5
+ipython==9.0.2
+ipython_genutils==0.2.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.5
+isoduration==20.11.0
+jaraco.collections==5.1.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jaraco.text==4.0.0
+jedi==0.19.2
+Jinja2==3.1.5
+joblib==1.4.2
+json5==0.12.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-collaboration-ui==1.1.0
+jupyter-docprovider==1.1.0
+jupyter-events==0.12.0
+jupyter-server-ydoc==1.1.0
+jupyter-ydoc==3.0.3
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_packaging==0.12.3
+jupyter_server==2.15.0
+jupyter_server_fileid==0.9.3
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+keyutils==0.6
+kiwisolver==1.4.5
+legacy-cgi==2.6.3
+LibAppArmor==4.0.3
+liquidctl==1.14.0
+lit==19.1.7.dev0
+llvmlite==0.44.0
+louis==3.33.0
+lxml==5.3.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.10.1
 matplotlib-inline==0.1.7
-mypy-extensions==1.0.0
-packaging==24.1
+mdurl==0.1.2
+mistune==3.1.3
+more-itertools==10.6.0
+msgpack==1.0.5
+nbclassic==1.3.0.dev0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest_asyncio==1.6.0
+netsnmp-python==1.0a1
+nftables==0.1
+notebook==7.3.3
+notebook_shim==0.2.4
+npyscreen==4.10.5
+nspektr==0.5.0
+numba==0.61.0+0.g8ec16ceeb.dirty
+numpy==2.2.4
+ordered-set==4.1.0
+overrides==7.7.0
+packaging==24.2
+pacman_mirrors==4.27
+pandas==2.2.3
+pandocfilters==1.5.1
 parso==0.8.4
-pathspec==0.12.1
+patsy==1.0.1
 pexpect==4.9.0
-platformdirs==4.2.2
-prompt_toolkit==3.0.47
+pickleshare==0.7.5
+pillow==11.1.0
+pipenv==2024.4.1
+pipx==1.7.1
+platformdirs==4.3.6
+ply==3.11
+pooch==1.8.2
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
+psutil==7.0.0
 ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.18.0
-six==1.16.0
-stack-data==0.6.3
-tokenize-rt==5.2.0
+pure_eval==0.2.3
+pycairo==1.27.0
+pyclibrary==0.2.2
+pycparser==2.22
+pycrdt==0.12.11
+pycrdt-websocket==0.15.4
+pycuda==2024.1.2
+pycups==2.0.4
+pycurl==7.45.4
+pydantic==2.11.2
+pydantic_core==2.33.1
+pyelftools==0.31
+Pygments==2.19.1
+PyGObject==3.52.3
+pynvim==0.5.2
+pyOpenSSL==25.0.0
+pyparsing==3.2.1
+PyQt5==5.15.11
+PyQt5_sip==12.17.0
+PySide6==6.9.0
+pysmbc==1.0.25.1
+python-dateutil==2.9.0
+python-json-logger==3.3.0
+pytools==2024.1.5
+pytz==2025.1
+pyusb==1.2.1
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+reportlab==4.2.2
+requests==2.32.3
+requests-unixsocket==0.3.0
+resolvelib==1.1.0
+rfc3339_validator==0.1.4
+rfc3986_validator==0.1.1
+rfc3987==1.3.8
+rich==14.0.0
+rpds-py==0.22.3
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+Send2Trash==1.8.3
+setuptools==75.8.0
+shiboken6==6.9.0
+shiboken6-generator==6.9.0
+six==1.17.0
+smbus==1.1
+sniffio==1.3.1
+soupsieve==2.6
+sqlite-anyio==0.2.3
+stack_data==0.6.3
+statsmodels==0.14.4
+systemd-python==235
+TBB==0.2
+tenacity==9.1.0
+terminado==0.18.1
+testpath==0.6.0
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+tomli==2.0.1
+tomlkit==0.13.2
+tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
+trove-classifiers==2025.3.19.19
+typeguard==4.4.2
+types-python-dateutil==2.9.0.20241206
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+uc-micro-py==1.0.3
+udiskie==2.5.7
+Unidecode==1.3.8
+uri-template==1.3.0
+urllib3==2.3.0
+userpath==1.9.2
+validate-pyproject==0.24.1
+virtualenv==20.28.0
+virtualenv-clone==0.5.7
 wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+wheel==0.45.1
+y-py==0.6.2
+ypy-websocket==0.12.4
+zipp==3.21.0
