--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ private.py
 src/private.py
 data/historical
 src/friends_src
+src/prophandler/proptrackers/*.parquet
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
