--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ private.py
 src/private.py
 data/historical
 src/friends_src
-src/prophandler/proptrackers/*.parquet
+src/prophandler/proptrackers/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
