--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,17 @@ cffi==2.0.0
 charset-normalizer==3.4.3
 comm==0.2.3
 contourpy==1.3.3
+cramjam==2.11.0
 cycler==0.12.1
 debugpy==1.8.17
 decorator==5.2.1
 defusedxml==0.7.1
 executing==2.2.1
 fastjsonschema==2.21.2
+fastparquet==2025.12.0
 fonttools==4.60.0
 fqdn==1.5.1
+fsspec==2025.12.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -73,6 +76,7 @@ prompt_toolkit==3.0.52
 psutil==7.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==22.0.0
 pycparser==2.23
 Pygments==2.19.2
 pyparsing==3.2.5
